--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <header>
-    <nav class="navbar"><a class="logo" href="/index.html">Inicio</a>
+    <nav class="navbar"><a class="logo" href="index.html">Inicio</a>
         <ul class="nav-menu">
             <li class="nav-item"><a href="#sobre" class="nav-link">Sobre</a></li>
             <li class="nav-item"><a href="#politica" class="nav-link">Política de Privacidade</a></li>
