--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ Agradecemos por confiar em nosso serviço de rastreamento de encomendas.<br> Sua
 </section>
 
 <footer>
-    <p>Desenvolvido por <a href="https://ninja1375.github.io/Meu-Portfolio/" target="_blank">Antônio Nascimento</a> © 2024 </p>
-    <p>Este site utiliza API pública do <a href="https://linketrack.com/" target="_blank">linketrack.com</a></p>
+    <p>Desenvolvido por <a href="https://ninja1375.github.io/Meu-Portfolio/" target="_blank">Antônio Nascimento</a></p>
+    <p>Utilizamos API pública do <a href="https://linketrack.com/" target="_blank">linketrack.com</a></p>
 </footer>
 
 <script>
