--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Agradecemos por confiar em nosso serviço de rastreamento de encomendas.<br> Sua
 
 <footer>
     <p>Desenvolvido por <a href="https://portfolio-antonio-nascimento.netlify.app/" target="_blank">Antônio Nascimento</a></p>
-    <p>Utilizamos API pública do <a href="https://linketrack.com/" target="_blank">linketrack.com</a></p>
+    <a href="https://www.siterastreio.com.br/" target="_blank">Rastreamento</a>
 </footer>
 
 <script>
